@@ -212,7 +212,7 @@ WeatherTerrainRenderer::Draw(Canvas &canvas,
 
   raster_renderer.ScanMap(*map, projection);
 
-  raster_renderer.GenerateImage(is_terrain, do_shading, height_scale,
+  raster_renderer.GenerateImage(do_shading, height_scale,
                                 TerrainContrast, TerrainBrightness,
                                 sunazimuth);
 
